Revise tips and savings boxes in index.html
Updated tips and savings sections with new content and styles.

--- a/index.html
+++ b/index.html
@@ -132,11 +132,18 @@
     .links-list a { color: #800000; text-decoration: none; }
     .links-list a:hover { text-decoration: underline; }
 
-    /* Tips en Forum Box */
+    /* Tips Boxen */
     .tips-box {
       background: #f9f9f9; border: 1px solid #e0e0e0; border-radius: 8px;
       padding: 14px 16px; margin-bottom: 24px;
     }
+    /* Nieuwe stijl voor Bespaartips */
+    .savings-box {
+      background: #e8f5e9; border: 1px solid #c8e6c9; border-radius: 8px;
+      padding: 14px 16px; margin-bottom: 24px;
+    }
+    .savings-box h3 { color: #2e7d32; margin-top: 0; }
+
     .forum-box {
       background: #fff3cd; border: 1px solid #ffeeba; border-radius: 8px;
       padding: 14px 16px; margin-bottom: 24px; color: #856404;
@@ -214,6 +221,24 @@
       <div class="tech-grid" id="techCards">
         </div>
 
+      <div class="savings-box">
+        <h3>💡 Slimme bespaartips uit de praktijk</h3>
+        <ul>
+          <li>
+            <strong>Bespaar op TV:</strong> Veel Nederlanders in Frankrijk zeggen hun dure satelliet-TV abonnement op (Canal Digitaal) en kijken via apps (zoals NLZIET) op hun smart-TV. Dit vereist wel een stabiele internetverbinding.
+          </li>
+          <li>
+            <strong>Slecht mobiel bereik?</strong> Activeer "Bellen via WiFi" (VoWiFi) op uw smartphone. Zo bent u binnenshuis perfect bereikbaar, ook als de zendmast ver weg is (ideaal i.c.m. Starlink of Fibre).
+          </li>
+          <li>
+            <strong>Lange oprit?</strong> Ligt er glasvezel aan de weg, maar is de aansluiting naar uw huis onbetaalbaar (bijv. >500m)? Dan is Starlink of 4G vaak het enige betaalbare alternatief.
+          </li>
+          <li>
+            <strong>Subsidie checken:</strong> In sommige "witte zones" (geen vast internet mogelijk) vergoedt de Franse staat tot €150 (of soms meer) op de aanschaf van hardware voor Satelliet of 4G via de regeling <em>"Cohésion Numérique des Territoires"</em>. Vraag dit na bij de provider.
+          </li>
+        </ul>
+      </div>
+
       <div class="tips-box">
         <h3>Wat is belangrijk &amp; Prijsindicatie</h3>
         <ul>
@@ -226,19 +251,19 @@
             <em>Prijsindicatie: €30 – €45 per maand.</em>
           </li>
           <li>
-            <strong>Starlink (LEO):</strong> Beste optie voor buitengebied zonder vaste lijn.<br>
-            <em>Prijsindicatie: €40 – €50 per maand + eenmalig hardware (~€250-450).</em>
+            <strong>Starlink (LEO):</strong> Lage vertraging (latency), dus beter voor videobellen dan klassieke satelliet.<br>
+            <em>Prijsindicatie: €40 – €50 per maand + hardware (~€250-450).</em>
           </li>
           <li>
-            <strong>Klassieke Satelliet:</strong> Alleen doen als er écht niets anders is.<br>
-            <em>Prijsindicatie: €30 – €70 per maand (vaak met datalimiet).</em>
+            <strong>Klassieke Satelliet (Nordnet e.a.):</strong> Let op: hogere vertraging (latency), minder geschikt voor videobellen/gamen.<br>
+            <em>Prijsindicatie: €30 – €70 per maand.</em>
           </li>
         </ul>
       </div>
 
       <div class="forum-box">
         <strong>Praat mee op het forum:</strong><br>
-        Lees de ervaringen van anderen of stel uw vraag. Bekijk de laatste 20 berichten over dit onderwerp op Nederlanders.fr:<br>
+        Lees de ervaringen van anderen (bijv. over Neosat vs Starlink). Bekijk de laatste 20 berichten over dit onderwerp op Nederlanders.fr:<br>
         👉 <a href="https://www.nederlanders.fr/profiles/blog/list?tag=Telecommunicatie" target="_blank">Nieuwste berichten over Telecommunicatie</a>
       </div>
 
