Update HTML structure and improve styling

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <title>Internetverbinding – Dataverbinding Frankrijk</title>
 
 <style>
-body { font-family: Arial; padding:20px; background:white; color:#000; }
+body { font-family: Arial; padding:20px; background:white; color:#000; max-width:800px; margin:0 auto; }
 h1 { color:#800000; margin-bottom:5px; }
-h3 { color:#800000; }
+h3 { color:#800000; margin-top:30px; }
 .pill { background:#800000; color:white; padding:4px 8px; border-radius:20px; font-size:11px; }
 .tech-card { border:1px solid #ccc; padding:15px; border-radius:8px; margin-bottom:20px; }
 .suggestion-item { padding:8px; border-bottom:1px solid #ddd; cursor:pointer; }
@@ -21,22 +21,18 @@ h3 { color:#800000; }
 <h1>Internetverbinding</h1>
 <h3 style="color:#777;">Dataverbinding Frankrijk</h3>
 
-<p>Vul een adres in. Wij halen realtime gegevens op via ARCEP en BAN.</p>
+<p>Vul uw adres in. Wij scannen de omgeving op beschikbare aansluitingen.</p>
 
-<input id="addressInput" onkeyup="fetchAddresses()" placeholder="Bijv. 5 route du Village, 32100 Condom" style="width:100%;padding:12px;font-size:16px;" />
+<input id="addressInput" onkeyup="fetchAddresses()" placeholder="Bijv. 22 Rue de Sehen" style="width:100%;padding:12px;font-size:16px;" />
 
 <div id="addressSuggestions"></div>
 
 <div id="results" style="display:none;margin-top:30px;">
-  <h3>Geselecteerd adres</h3>
-  <p>
-    <strong>Adres:</strong> <span id="normalizedAddress"></span><br />
-    <strong>GPS:</strong> <span id="gpsCoords"></span>
-  </p>
+  <h3>Resultaten voor: <span id="normalizedAddress" style="color:#000;"></span></h3>
+  
+  <div id="streetScan" style="margin-bottom:30px;"></div>
 
-  <div id="arcepBlock" style="margin:20px 0;">Bezig…</div>
-
-  <h3>Internetopties</h3>
+  <h3>Aanbieders</h3>
   <div id="techCards"></div>
 
   <h3>TV</h3>
@@ -45,6 +41,10 @@ h3 { color:#800000; }
   <h3>VPN</h3>
   <ul id="vpnList"></ul>
 </div>
+
+<footer>
+  Infofrankrijk.com en Nederlanders.fr.
+</footer>
 
 <script src="script.js"></script>
 </body>
