Replace streetScan div with arcepOutput div
Replaced 'streetScan' div with 'arcepOutput' div and adjusted margin.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h3 { color:#800000; margin-top:30px; }
 <div id="results" style="display:none;margin-top:30px;">
   <h3>Resultaten voor: <span id="normalizedAddress" style="color:#000;"></span></h3>
   
-  <div id="streetScan" style="margin-bottom:30px;"></div>
+  <div id="arcepOutput" style="margin-bottom:20px;"></div>
 
   <h3>Aanbieders</h3>
   <div id="techCards"></div>
