--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>Internetverbinding – Dataverbinding Frankrijk</title>
 
 <style>
-/* ... bestaande styles ... */
-body { font-family: Arial, sans-serif; padding:20px; background:white; color:#000; max-width:800px; margin:0 auto; padding-bottom: 100px; /* Ruimte voor de balk */ }
+/* BASIS STIJL */
+body { font-family: Arial, sans-serif; padding:20px; background:white; color:#000; max-width:800px; margin:0 auto; padding-bottom: 120px; /* Extra ruimte onderaan voor de balk */ }
 h1 { color:#800000; margin-bottom:5px; }
 h3 { color:#800000; margin-top:25px; margin-bottom:10px; }
 .pill { background:#800000; color:white; padding:4px 8px; border-radius:20px; font-size:11px; }
@@ -19,33 +19,42 @@ ul { padding-left:20px; margin-top:0; }
 li { margin-bottom:5px; }
 footer { margin-top:50px; border-top:1px solid #eee; padding-top:20px; color:#888; font-size:13px; text-align:center; }
 
-/* NIEUW: De Sticky 'Afstandsbediening' */
+/* DE STICKY BALK STIJL */
 .sticky-bottom-bar {
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
     background: white;
-    border-top: 2px solid #800000;
-    box-shadow: 0 -4px 10px rgba(0,0,0,0.1);
+    border-top: 3px solid #800000;
+    box-shadow: 0 -4px 15px rgba(0,0,0,0.2);
     padding: 15px;
     text-align: center;
-    z-index: 1000;
+    z-index: 9999; /* Altijd bovenop */
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 10px;
     flex-wrap: wrap;
 }
+.sticky-label {
+    width: 100%; 
+    font-size: 13px; 
+    color: #666; 
+    margin-bottom: 5px;
+    font-weight: bold;
+}
 .sticky-btn {
-    padding: 12px 20px;
-    border-radius: 30px; /* Ronde knoppen */
+    padding: 10px 18px;
+    border-radius: 30px;
     cursor: pointer;
     font-weight: bold;
     font-size: 14px;
     border: 2px solid;
     background: white;
-    transition: transform 0.1s;
+    transition: transform 0.1s, background 0.1s;
 }
+.sticky-btn:hover { transform: scale(1.05); }
 .sticky-btn:active { transform: scale(0.95); }
 </style>
 </head>
