Update script tag to include version query parameter

--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@ footer { margin-top:50px; border-top:1px solid #eee; padding-top:20px; color:#88
   Mogelijk gemaakt door Infofrankrijk.com en Nederlanders.fr
 </footer>
 
-<script src="script.js"></script>
+<script src="script.js?v=2"></script>
 </body>
 </html>
